--- a/OpenSky.Client/Pages/FlightLog.xaml
+++ b/OpenSky.Client/Pages/FlightLog.xaml
@@ -172,9 +172,9 @@
                 <StackPanel Orientation="Vertical" Margin="5">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock>Total payload weight</TextBlock>
-                        <TextBlock Text="{Binding FlightLog.PayloadWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F2|true}" Margin="5,0,0,0" />
+                        <TextBlock Text="{Binding PayloadWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F2|true}" Margin="5,0,0,0" />
                     </StackPanel>
-                    <TextBlock Text="{Binding FlightLog.Payload}" Margin="0,15,0,0" />
+                    <TextBlock Text="{Binding Payload}" Margin="0,15,0,0" />
                 </StackPanel>
             </GroupBox>
         </Grid>
