--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -134,11 +134,14 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center">Weight:</TextBlock>
                     <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Fuel:</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center">Distances:</TextBlock>
                     <ComboBox Grid.Column="1" Grid.Row="0" MinWidth="150" Margin="10,5,0,5" ItemsSource="{Binding WeightUnits}" SelectedItem="{Binding WeightUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     <ComboBox Grid.Column="1" Grid.Row="1" MinWidth="150" Margin="10,5,0,5" ItemsSource="{Binding FuelUnits}" SelectedItem="{Binding FuelUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <ComboBox Grid.Column="1" Grid.Row="2" MinWidth="150" Margin="10,5,0,5" ItemsSource="{Binding DistanceUnits}" SelectedItem="{Binding DistanceUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
             </GroupBox>
             <GroupBox Grid.Column="1">
